Upgraded creator image to support multiple images - added desert sage

--- a/campaign/items/consumables/drink/Desert_Sage_Infusion.html
+++ b/campaign/items/consumables/drink/Desert_Sage_Infusion.html
@@ -1,20 +1,108 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title></title>
-</head>
-<body>
-<div class="dnd-header"><h1>Desert Sage Infusion</h1></div><hr/><div class="dnd-info"><h3>Desert Sage Infusion</h3><p class="first-paragraph">Enjoy this soothing infusion as a calming drink or use it as a base for other recipes.</p>
-<h4>Ingredients</h4><p><ul>
-<li>1 tablespoon dried Desert Sage leaves</li>
-<li>1 cup boiling water</li>
-</ul></p>
-<h4>Instructions</h4><p><ul>
-<li>Place the dried Desert Sage leaves in a teapot or a heatproof container.</li>
-<li>Pour boiling water over the leaves.</li>
-<li>Cover and let it steep for about 10 minutes.</li>
-<li>Strain the infusion into a cup.</li>
-<li>Optionally, you can add a teaspoon of honey or lemon juice for taste.</li>
-</ul></p>
-</div><hr></body>
+ <head>
+  <meta charset="utf-8"/>
+  <title>
+   Desert Sage Infusion
+  </title>
+  <link href="../../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <!-- JavaScript to handle navigation buttons -->
+  <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
+  </script>
+  <script>
+   function goBack() {
+        window.history.back();
+      }
+
+      function goForward() {
+        window.history.forward();
+      }
+
+      function goToIndex() {
+        window.location.href = "./index.html";
+      }
+  </script>
+ </head>
+ <body>
+  <div class="navigation">
+   <a href="#" onclick="history.back(); return false;">
+    <i class="fas fa-arrow-left">
+    </i>
+    Back
+   </a>
+   <a href="./index.html">
+    <i class="fas fa-home">
+    </i>
+    Home
+   </a>
+   <a href="../index.html">
+    <i class="fas fa-level-up-alt">
+    </i>
+    Up
+   </a>
+   <a href="#" onclick="history.forward(); return false;">
+    <i class="fas fa-arrow-right">
+    </i>
+    Forward
+   </a>
+  </div>
+  <div class="dnd-header">
+   <h1>
+    Desert Sage Infusion
+   </h1>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Desert Sage Infusion
+   </h3>
+   <p class="first-paragraph">
+    Enjoy this soothing infusion as a calming drink or use it as a base for other recipes.
+   </p>
+   <h4>
+    Ingredients
+   </h4>
+   <p>
+    <ul>
+     <li>
+      1 tablespoon dried
+      <a href="../herbs/Desert_Sage.html">
+       Desert Sage
+      </a>
+      leaves
+     </li>
+     <li>
+      1 cup boiling water
+     </li>
+    </ul>
+   </p>
+   <h4>
+    Instructions
+   </h4>
+   <p>
+    <ul>
+     <li>
+      Place the dried
+      <a href="../herbs/Desert_Sage.html">
+       Desert Sage
+      </a>
+      leaves in a teapot or a heatproof container.
+     </li>
+     <li>
+      Pour boiling water over the leaves.
+     </li>
+     <li>
+      Cover and let it steep for about 10 minutes.
+     </li>
+     <li>
+      Strain the infusion into a cup.
+     </li>
+     <li>
+      Optionally, you can add a teaspoon of honey or lemon juice for taste.
+     </li>
+    </ul>
+   </p>
+  </div>
+  <hr/>
+ </body>
 </html>
