--- a/campaign/items/consumables/herbs/img/index.html
+++ b/campaign/items/consumables/herbs/img/index.html
@@ -4,7 +4,7 @@
   <title>
    index
   </title>
-  <link href="../../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <link href="../../../../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
   <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
   </script>
@@ -46,33 +46,28 @@
    </a>
   </div>
   <h1>
-   Index of /home/awtorode/git/DnD/campaign/items/consumables/herbs
+   Index of /home/awtorode/git/DnD/campaign/items/consumables/herbs/img
   </h1>
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="Desert_Sage.html">
-      Desert Sage
+     <a href="desert_sage (1).jpg">
+      desert sage (1).jpg
      </a>
     </li>
     <li>
-     <a class="image-index-link" href="img/desert_sage (1).jpg">
-      img/desert_sage (1).jpg
+     <a href="desert_sage (2).jpg">
+      desert sage (2).jpg
      </a>
     </li>
     <li>
-     <a class="image-index-link" href="img/desert_sage (2).jpg">
-      img/desert_sage (2).jpg
+     <a href="desert_sage (3).jpg">
+      desert sage (3).jpg
      </a>
     </li>
     <li>
-     <a class="image-index-link" href="img/desert_sage (3).jpg">
-      img/desert_sage (3).jpg
-     </a>
-    </li>
-    <li>
-     <a class="image-index-link" href="img/desert_sage (4).jpg">
-      img/desert_sage (4).jpg
+     <a href="desert_sage (4).jpg">
+      desert sage (4).jpg
      </a>
     </li>
    </ul>
