--- a/campaign/locations/regions/Matella/Elda_Reem_Passlands/Elda_Reem_Passlands.html
+++ b/campaign/locations/regions/Matella/Elda_Reem_Passlands/Elda_Reem_Passlands.html
@@ -77,9 +77,11 @@
    </h3>
    <p>
     <div class="dnd-image-info">
-     <a href="img/Elda_Reem_Passlands.jpg">
-      <img alt="Image" src="img/Elda_Reem_Passlands.jpg"/>
-     </a>
+     <div class="dnd-image-list">
+      <a href="img/Elda_Reem_Passlands.jpg">
+       <img alt="Image" src="img/Elda_Reem_Passlands.jpg"/>
+      </a>
+     </div>
      <div class="dnd-image-source">
       Source: Created by Antonius Torode
      </div>
@@ -329,11 +331,20 @@
       </a>
      </li>
      <li>
-      <a href="https://www.youtube.com/watch?v=evQq8iLfCaU
-">
+      <a href="https://www.youtube.com/watch?v=evQq8iLfCaU">
        Vanilla Searing Gorge - Music &amp; Ambience (1 hour, 4K, World of Warcraft Classic)
       </a>
       <a href="../../../../../music/Vanilla_Searing_Gorge__Music_&amp;_Ambience_(1_hour,_4K,_World_of_Warcraft_Classic).mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=ib2ft89f04Q
+">
+       Vanilla Duskwood - Music &amp; Ambience (3 hours, World of Warcraft Classic)
+      </a>
+      <a href="../../../../../music/Vanilla_Duskwood__Music_&amp;_Ambience_(3_hours,_World_of_Warcraft_Classic).mp3">
        <i class="fas fa-folder">
        </i>
       </a>
