--- a/campaign/locations/regions/Matella/Eldara/Eldara.html
+++ b/campaign/locations/regions/Matella/Eldara/Eldara.html
@@ -310,12 +310,19 @@
     Flora of Eldara: Botanical Wonders in the Desert Sands
    </h3>
    <p class="first-paragraph">
-    The desert realm of Eldara harbors a diverse array of plant life, which thrives despite the harsh conditions of the arid landscape. This section unveils the remarkable flora that has adapted to the scorching sun, shifting sands, and limited water sources of Eldara. From the resilient desert sage to the elusive twilight vine, these plants showcase exceptional adaptations to survive in this challenging environment. Embark on a journey through the botanical tapestry of Eldara, where vibrant colors, subtle fragrances, and astonishing resilience converge in a fascinating display of nature's ingenuity. Unveil the hidden wonders that lie beneath the desert surface and explore the remarkable diversity of Eldara's plant life. Here are some unique plants found throughout Eldara, including those specific to the northern areas along the bordering mountains:
+    The desert realm of Eldara harbors a diverse array of plant life, which thrives despite the harsh conditions of the arid landscape. This section unveils the remarkable flora that has adapted to the scorching sun, shifting sands, and limited water sources of Eldara. From the resilient
+    <a href="../../../../items/consumables/herbs/Desert_Sage.html">
+     Desert Sage
+    </a>
+    to the elusive twilight vine, these plants showcase exceptional adaptations to survive in this challenging environment. Embark on a journey through the botanical tapestry of Eldara, where vibrant colors, subtle fragrances, and astonishing resilience converge in a fascinating display of nature's ingenuity. Unveil the hidden wonders that lie beneath the desert surface and explore the remarkable diversity of Eldara's plant life. Here are some unique plants found throughout Eldara, including those specific to the northern areas along the bordering mountains:
    </p>
    <p>
     <ul>
      <li>
-      Desert Sage (Salvus aureus): A hardy plant with silvergray leaves and small purple flowers. It thrives in the arid climate of Eldara and is known for its medicinal properties, used by the locals for healing and purification rituals.
+      <a href="../../../../items/consumables/herbs/Desert_Sage.html">
+       Desert Sage
+      </a>
+      (Salvus aureus): A hardy plant with silvergray leaves and small purple flowers. It thrives in the arid climate of Eldara and is known for its medicinal properties, used by the locals for healing and purification rituals.
      </li>
      <li>
       Sand Blossom (Flora auris): This rare and beautiful flower blooms only during the cool nights of Eldara's desert. Its petals are a vibrant shade of magenta, contrasting against the sandy landscape. The Sand Blossom releases a sweet fragrance that attracts nocturnal insects.
