--- a/campaign/items/consumables/herbs/Desert_Sage.html
+++ b/campaign/items/consumables/herbs/Desert_Sage.html
@@ -1,15 +1,115 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title></title>
-</head>
-<body>
-<div class="dnd-header"><h1>Desert Sage</h1></div><hr/><div class="dnd-image"><h3>Desert Sage</h3><p><div class="dnd-image-info"><a href="img/desert_sage.jpg"><img src="img/desert_sage.jpg" alt="Image"></a><div class="dnd-image-source">Source: Created by Antonius Torode</div><div class="dnd-image-caption">Caption: Desert Sage.</div></div></p></div><hr><div class="dnd-info"><h3>Basic Information</h3><p class="first-paragraph">Desert Sage (Salvus aureus) is a remarkable plant species indigenous to the arid climate of Eldara. It is characterized by its hardy nature, silver-gray leaves, and delicate small purple flowers. Desert Sage has been highly revered by the locals for centuries due to its medicinal properties and its integral role in healing and purification rituals. Here is some information about Desert Sage and its uses:</p>
-<p><ul>
-<li>Medicinal Properties: Desert Sage possesses a rich array of medicinal compounds that make it valuable in traditional Eldaran medicine. The plant contains essential oils, flavonoids, and phenolic compounds that contribute to its healing properties. These components are believed to have antimicrobial, antiinflammatory, and antioxidant effects, which can aid in various health conditions.</li>
-<li>Respiratory Health: Desert Sage has been traditionally used to support respiratory health. The plant's aromatic properties make it an excellent choice for soothing respiratory congestion, relieving coughs, and easing symptoms of asthma and bronchitis. Inhaling the vapors of Desert Sage leaves or using them in herbal remedies can promote clearer breathing and alleviate respiratory discomfort.</li>
-<li>Stress Relief and Relaxation: Desert Sage is renowned for its calming properties. Its pleasant aroma is thought to have a soothing effect on the mind and body, helping to reduce stress, anxiety, and promote relaxation. Preparations made from Desert Sage, such as herbal teas or essential oilinfused products, can be used to create a serene atmosphere or aid in relaxation practices like meditation and aromatherapy.</li>
-<li>Skin Care: Desert Sage possesses beneficial properties for the skin. The plant's antiinflammatory and antioxidant qualities can help soothe skin irritations, reduce redness, and promote skin rejuvenation. Preparations like creams, ointments, or infused oils made from Desert Sage can be applied topically to alleviate skin conditions such as eczema, rashes, or insect bites.</li>
-</ul></p>
-</div><hr></body>
+ <head>
+  <meta charset="utf-8"/>
+  <title>
+   Desert Sage
+  </title>
+  <link href="../../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <!-- JavaScript to handle navigation buttons -->
+  <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
+  </script>
+  <script>
+   function goBack() {
+        window.history.back();
+      }
+
+      function goForward() {
+        window.history.forward();
+      }
+
+      function goToIndex() {
+        window.location.href = "./index.html";
+      }
+  </script>
+ </head>
+ <body>
+  <div class="navigation">
+   <a href="#" onclick="history.back(); return false;">
+    <i class="fas fa-arrow-left">
+    </i>
+    Back
+   </a>
+   <a href="./index.html">
+    <i class="fas fa-home">
+    </i>
+    Home
+   </a>
+   <a href="../index.html">
+    <i class="fas fa-level-up-alt">
+    </i>
+    Up
+   </a>
+   <a href="#" onclick="history.forward(); return false;">
+    <i class="fas fa-arrow-right">
+    </i>
+    Forward
+   </a>
+  </div>
+  <div class="dnd-header">
+   <h1>
+    Desert Sage
+   </h1>
+  </div>
+  <hr/>
+  <div class="dnd-image">
+   <h3>
+    Desert Sage
+   </h3>
+   <p>
+    <div class="dnd-image-info">
+     <div class="dnd-image-list">
+      <a href="img/desert_sage (1).jpg">
+       <img alt="Image" src="img/desert_sage (1).jpg"/>
+      </a>
+      <a href="img/desert_sage (2).jpg">
+       <img alt="Image" src="img/desert_sage (2).jpg"/>
+      </a>
+      <a href="img/desert_sage (3).jpg">
+       <img alt="Image" src="img/desert_sage (3).jpg"/>
+      </a>
+      <a href="img/desert_sage (4).jpg">
+       <img alt="Image" src="img/desert_sage (4).jpg"/>
+      </a>
+     </div>
+     <div class="dnd-image-source">
+      Source: Created by Bing AI image creator
+     </div>
+     <div class="dnd-image-caption">
+      Caption: Desert Sage.
+     </div>
+    </div>
+   </p>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Basic Information
+   </h3>
+   <p class="first-paragraph">
+    Desert Sage (Salvus aureus) is a remarkable plant species indigenous to the arid climate of
+    <a href="../../../locations/regions/Matella/Eldara/Eldara.html">
+     Eldara
+    </a>
+    . It is characterized by its hardy nature, silver-gray leaves, and delicate small purple flowers. Desert Sage has been highly revered by the locals for centuries due to its medicinal properties and its integral role in healing and purification rituals. Here is some information about Desert Sage and its uses:
+   </p>
+   <p>
+    <ul>
+     <li>
+      Medicinal Properties: Desert Sage possesses a rich array of medicinal compounds that make it valuable in traditional Eldaran medicine. The plant contains essential oils, flavonoids, and phenolic compounds that contribute to its healing properties. These components are believed to have antimicrobial, antiinflammatory, and antioxidant effects, which can aid in various health conditions.
+     </li>
+     <li>
+      Respiratory Health: Desert Sage has been traditionally used to support respiratory health. The plant's aromatic properties make it an excellent choice for soothing respiratory congestion, relieving coughs, and easing symptoms of asthma and bronchitis. Inhaling the vapors of Desert Sage leaves or using them in herbal remedies can promote clearer breathing and alleviate respiratory discomfort.
+     </li>
+     <li>
+      Stress Relief and Relaxation: Desert Sage is renowned for its calming properties. Its pleasant aroma is thought to have a soothing effect on the mind and body, helping to reduce stress, anxiety, and promote relaxation. Preparations made from Desert Sage, such as herbal teas or essential oilinfused products, can be used to create a serene atmosphere or aid in relaxation practices like meditation and aromatherapy.
+     </li>
+     <li>
+      Skin Care: Desert Sage possesses beneficial properties for the skin. The plant's antiinflammatory and antioxidant qualities can help soothe skin irritations, reduce redness, and promote skin rejuvenation. Preparations like creams, ointments, or infused oils made from Desert Sage can be applied topically to alleviate skin conditions such as eczema, rashes, or insect bites.
+     </li>
+    </ul>
+   </p>
+  </div>
+  <hr/>
+ </body>
 </html>
