Added formatter for input files and added sand blossom

--- a/campaign/items/consumables/drink/Desert_Sage_Infusion.html
+++ b/campaign/items/consumables/drink/Desert_Sage_Infusion.html
@@ -48,13 +48,19 @@
   </div>
   <div class="dnd-header">
    <h1>
-    Desert Sage Infusion
+    <a href="../herbs/Desert_Sage.html">
+     Desert Sage
+    </a>
+    Infusion
    </h1>
   </div>
   <hr/>
   <div class="dnd-info">
    <h3>
-    Desert Sage Infusion
+    <a href="../herbs/Desert_Sage.html">
+     Desert Sage
+    </a>
+    Infusion
    </h3>
    <p class="first-paragraph">
     Enjoy this soothing infusion as a calming drink or use it as a base for other recipes.
