--- a/campaign/items/consumables/herbs/img/index.html
+++ b/campaign/items/consumables/herbs/img/index.html
@@ -70,6 +70,26 @@
       desert sage (4).jpg
      </a>
     </li>
+    <li>
+     <a href="sand_blossom (1).jpg">
+      sand blossom (1).jpg
+     </a>
+    </li>
+    <li>
+     <a href="sand_blossom (2).jpg">
+      sand blossom (2).jpg
+     </a>
+    </li>
+    <li>
+     <a href="sand_blossom (3).jpg">
+      sand blossom (3).jpg
+     </a>
+    </li>
+    <li>
+     <a href="sand_blossom (4).jpg">
+      sand blossom (4).jpg
+     </a>
+    </li>
    </ul>
   </div>
  </body>
