--- a/campaign/items/consumables/herbs/index.html
+++ b/campaign/items/consumables/herbs/index.html
@@ -56,6 +56,11 @@
      </a>
     </li>
     <li>
+     <a href="Sand_Blossom.html">
+      Sand Blossom
+     </a>
+    </li>
+    <li>
      <a class="image-index-link" href="img/desert_sage (1).jpg">
       img/desert_sage (1).jpg
      </a>
@@ -73,6 +78,26 @@
     <li>
      <a class="image-index-link" href="img/desert_sage (4).jpg">
       img/desert_sage (4).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/sand_blossom (1).jpg">
+      img/sand_blossom (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/sand_blossom (2).jpg">
+      img/sand_blossom (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/sand_blossom (3).jpg">
+      img/sand_blossom (3).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/sand_blossom (4).jpg">
+      img/sand_blossom (4).jpg
      </a>
     </li>
    </ul>
