--- a/campaign/locations/regions/Matella/Eldara/Eldara.html
+++ b/campaign/locations/regions/Matella/Eldara/Eldara.html
@@ -325,7 +325,14 @@
       (Salvus aureus): A hardy plant with silvergray leaves and small purple flowers. It thrives in the arid climate of Eldara and is known for its medicinal properties, used by the locals for healing and purification rituals.
      </li>
      <li>
-      Sand Blossom (Flora auris): This rare and beautiful flower blooms only during the cool nights of Eldara's desert. Its petals are a vibrant shade of magenta, contrasting against the sandy landscape. The Sand Blossom releases a sweet fragrance that attracts nocturnal insects.
+      <a href="../../../../items/consumables/herbs/Sand_Blossom.html">
+       Sand Blossom
+      </a>
+      (Flora auris): This rare and beautiful flower blooms only during the cool nights of Eldara's desert. Its petals are a vibrant shade of magenta, contrasting against the sandy landscape. The
+      <a href="../../../../items/consumables/herbs/Sand_Blossom.html">
+       Sand Blossom
+      </a>
+      releases a sweet fragrance that attracts nocturnal insects.
      </li>
      <li>
       Sunfire Cactus (Solarii cactacea): Found in the northern regions near the bordering mountains, the Sunfire Cactus is a towering cactus species with golden spines that reflect sunlight, giving it a fiery appearance. It stores water within its fleshy stems and produces vibrant red flowers during the brief rainy season.
